2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* src/stand_alone/eth_drv.c: 
	* src/net/eth_drv.c: Improve network speeds by reducing some
	overhead and also the delay when sending a packet.

2003-07-23  Nick Garnett  <nickg@balti.calivar.com>

	* include/eth_drv.h:
	* src/net/eth_drv.c:
	Added an ifndef to fix warnings about NBPFILTER not being
	defined. 

2003-03-20  Mark Salter  <msalter@redhat.com>

	* cdl/eth_drivers.cdl (CYGHWR_NET_DRIVERS): Moved here from net/common.

2003-03-14  Nick Garnett  <nickg@calivar.com>

	* src/net/eth_drv.c: Added calls to cyg_net_show_mbufs() whenever
	we see an out-of-mbufs problem.

2003-03-11  Mark Salter  <msalter@redhat.com>

	* src/stand_alone/eth_drv.c (eth_drv_stop): Uncomment, make non-static,
	and use __local_enet_sc.
	* include/eth_drv.h: Add extern decl for eth_drv_stop.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/eth_drivers.cdl: Add doc link.

2003-02-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/net/eth_drv.c: If driver can't set multi-cast, indicate it's
	only a warning.

2002-08-14  Gary Thomas  <gthomas@ecoscentric.com>

	* cdl/eth_drivers.cdl: CYGNUM_IO_ETH_DRIVERS_SG_LIST_SIZE 
	needs to be global (used by all drivers, not just NET).

2002-08-13  Gary Thomas  <gthomas@ecoscentric.com>

	* src/net/eth_drv.c (eth_drv_send): Print a better message
	if the scatter-gather list overflows.

	* include/eth_drv.h (MAX_ETH_DRV_SG): 
	* cdl/eth_drivers.cdl: Add control over size of scatter-gather
	data lists used to pass requests to physical layer.  Previous
	value was sometimes too small.

2002-07-31  Gary Thomas  <gary@chez-thomas.org>

	* src/net/eth_drv.c (eth_drv_start): Fix compile error when
	built with old stack (no multicast) - introduced below.

2002-07-26  Gary Thomas  <gary@chez-thomas.org>
2002-07-26  Ken Cox <jkc@redhat.com>

	* src/net/eth_drv.c (eth_drv_start): Force multicast address
	setup any time chip is reset/reconfigured.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>