@@ -1,3 +1,8 @@
+2003-10-09  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/stand_alone/eth_drv.c: Obviate __local_enet_addr, since this
+	same information is already kept in the driver structure *__local_enet_sc
+
 2003-08-19  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/stand_alone/eth_drv.c: 
